float 이용한 메인 레이아웃

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,9 @@
 @import url(./normalize.css);
 @import url(./reset.css);
+/* 기본 스타일 */
+*, *::before, *::after{
+  box-sizing: border-box;
+}
 
 /*  본문스타일 */
 body{
@@ -9,7 +13,6 @@ body{
 /* 레이아웃 */
 .header, .visual, .main, .slogan, .footer-inner{
   width: 940px;
-  box-sizing: border-box;
   margin: 0 auto;
 
 }
@@ -29,11 +32,34 @@ body{
 .main{
   background: lightgreen;
   height: 50vh;
+  display: flow-root;
+  padding:o 15px;
 }
+
+.group {
+  margin: 0 15px;
+  float: left;
+}
+
+.group1{
+  background-color: violet;
+  width: 250px;
+}
+
+.group2{
+  background-color: lightcoral;
+  width: 380px;
+}
+
+.group3{
+  background-color: rgb(91, 120, 127);
+  width: 190px;
+}
+
 /* 슬로건 */
 .slogan{
   background: skyblue;
-  height: 15vh;
+  height: 10vh; 
 }
 /* 푸터 */
 .footer{
@@ -41,5 +67,4 @@ body{
 }
 .footer-inner{
   background-color: silver;
-  height: 15vh;
-}
+  height: 15vh;}
