로고 배치 완료

--- a/styles/style.css
+++ b/styles/style.css
@@ -7,7 +7,7 @@
 
 /*  본문스타일 */
 body{
-  background: #ffc;
+  background: #ccc;
   font-family: "Pretendard Variable", Pretendard, -apple-system, BlinkMacSystemFont, system-ui, Roboto, "Helvetica Neue", "Segoe UI", "Apple SD Gothic Neo", "Noto Sans KR", "Malgun Gothic", "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", sans-serif;
 }
 /* 레이아웃 */
@@ -19,10 +19,25 @@ body{
 
 /* 헤더 */
 .header{
-  background: pink;
+  background: #fff;
   padding: 0 30px;
   height: 15vh;
+  border-radius: 0 0 15px 15px;
+  position: relative;
 }
+
+/* 로고 */
+.logo{
+  position: absolute;
+  top: 45px;
+  left: 60px;
+}
+
+/* 텍스트 링크 모음 */
+.member{
+  background-color: aqua;
+}
+
 /* 비주얼 */
 .visual{
   background: orange;
@@ -33,7 +48,7 @@ body{
   background: lightgreen;
   height: 50vh;
   display: flow-root;
-  padding:o 15px;
+  padding: o 15px;
 }
 
 .group {
@@ -59,7 +74,8 @@ body{
 /* 슬로건 */
 .slogan{
   background: skyblue;
-  height: 10vh; 
+  height: 10vh;
+  clear: both;
 }
 /* 푸터 */
 .footer{
