--- a/styles/style.css
+++ b/styles/style.css
@@ -5,8 +5,15 @@
   box-sizing: border-box;
 }
 
+/* 링크스타일 */
+a{
+  color: inherit;
+  text-decoration: none;
+}
+
 /*  본문스타일 */
 body{
+  color: #212121; 
   background: #ccc;
   font-family: "Pretendard Variable", Pretendard, -apple-system, BlinkMacSystemFont, system-ui, Roboto, "Helvetica Neue", "Segoe UI", "Apple SD Gothic Neo", "Noto Sans KR", "Malgun Gothic", "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", sans-serif;
 }
@@ -14,7 +21,6 @@ body{
 .header, .visual, .main, .slogan, .footer-inner{
   width: 940px;
   margin: 0 auto;
-
 }
 
 /* 헤더 */
@@ -36,6 +42,23 @@ body{
 /* 텍스트 링크 모음 */
 .member{
   background-color: aqua;
+  text-align:right;
+  padding: 4px 0;
+}
+
+.member li{
+  background-color: pink;
+  display: inline-block;    
+}
+
+.mamber a{
+  background-color: coral;
+  padding: 10px 0;
+  display: inherit;
+}
+
+.divider{
+  margin-right: 4px;
 }
 
 /* 비주얼 */
@@ -43,6 +66,7 @@ body{
   background: orange;
   height: 10vh;
 }
+
 /* 메인 */
 .main{
   background: lightgreen;
@@ -83,4 +107,5 @@ body{
 }
 .footer-inner{
   background-color: silver;
-  height: 15vh;}
+  height: 15vh;
+}
