--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,6 @@
 @import url(./normalize.css);
 @import url(./reset.css);
+@import url(./fontello.css);
 /* 기본 스타일 */
 *, *::before, *::after{
   box-sizing: border-box;
@@ -19,10 +20,27 @@ body{
 
 /* 헤더 */
 .header{
-  background: pink;
+  background: #fff;
   padding: 0 30px;
   height: 15vh;
+  border-radius: 0 0 15px 15px;
 }
+
+.member {
+  background-color: pink;
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: flex-end;
+}
+
+.member li::before{
+  content: ":";
+}
+
+.first::before{
+  content: ":";
+}
+
 /* 비주얼 */
 .visual{
   background: orange;
