--- a/styles/style.css
+++ b/styles/style.css
@@ -2,85 +2,134 @@
 @import url(./reset.css);
 @import url(./fontello.css);
 /* 기본 스타일 */
-*, *::before, *::after{
+*,
+*::before,
+*::after {
   box-sizing: border-box;
 }
 
-/*  본문스타일 */
-body{
-  background: #ffc;
-  font-family: "Pretendard Variable", Pretendard, -apple-system, BlinkMacSystemFont, system-ui, Roboto, "Helvetica Neue", "Segoe UI", "Apple SD Gothic Neo", "Noto Sans KR", "Malgun Gothic", "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", sans-serif;
+/* 링크 스타일 */
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
+/* 본문 스타일 */
+body {
+  color: #212121;
+  background: #ccc;
+  font-family: "Pretendard Variable", Pretendard, -apple-system,
+    BlinkMacSystemFont, system-ui, Roboto, "Helvetica Neue", "Segoe UI",
+    "Apple SD Gothic Neo", "Noto Sans KR", "Malgun Gothic", "Apple Color Emoji"  
+    "Segoe UI Emoji", "Segoe UI Symbol", sans-serif;
 }
 /* 레이아웃 */
-.header, .visual, .main, .slogan, .footer-inner{
+.header,
+.visual,
+.main,
+.slogan,
+.footer-inner {
   width: 940px;
   margin: 0 auto;
-
 }
-
 /* 헤더 */
-.header{
+.header {
   background: #fff;
   padding: 0 30px;
   height: 15vh;
   border-radius: 0 0 15px 15px;
 }
-
 .member {
   background-color: pink;
   display: flex;
   flex-flow: row nowrap;
   justify-content: flex-end;
 }
-
-.member li::before{
+/* 겹침 Cascading */
+/* 우선순위 규칙 */
+/* li (Type Selector) - 1점 */
+/* .first (Class Selector) - 10점 */
+/* #item (ID Selector) - 100점 */
+/* .member -> 10점, li -> 1점, ::before -> 1점  => 12점  */
+/* .member li::before {
   content: ":";
+} */
+/* .member -> 10점, .first -> 10점, ::before -> 1점  => 21점  */
+/* .member .first::before {
+  content: "첫번째 자식요소를 생성합니다.";
+} */
+/* .member li:first-child::before {
+  content: "";
+} */
+/* .member li:nth-child(n + 2)::before {
+  content: ":";
+  background-color: skyblue;
+} */
+.member li::before {
+  content: "\e800";
+  font-family: fontello;
 }
 
-.first::before{
-  content: ":";
+.member a {
+  text-transform: uppercase;
 }
 
 /* 비주얼 */
-.visual{
+.visual {
   background: orange;
+
+    
+          
+            
+    
+
+          
+    
+    
+  
   height: 10vh;
 }
 /* 메인 */
-.main{
+.main {
   background: lightgreen;
-  min-height: 450px;
-  display: flex;
-  flex-flow: row nowrap;
-  justify-content: space-between;
-  align-items: flex-start;
-  padding: 30px;
+  border-top: 1px solid red;
+  /* min-height: 450px; */
+  position: absolute;
 }
-
-.group1{
+.group {
+  height: 100px;
+}
+.group1 {
   background-color: violet;
   width: 250px;
+  float: right;
 }
-
-.group2{
-  background-color: lightcoral;
+.group2 {
+  background-color: salmon;
   width: 380px;
+  float: right;
 }
-
-.group3{
-  background-color: rgb(91, 120, 127);
+.group3 {
+  background-color: gold;
   width: 190px;
+  float: right;
 }
-
 /* 슬로건 */
-.slogan{
+.slogan {
   background: skyblue;
-  height: 10vh; 
+  height: 10vh;
+  clear: both;
 }
 /* 푸터 */
-.footer{
+.footer {
   background: gray;
+  width: 940px;
+  margin: 0 auto;
 }
-.footer-inner{
-  background-color: silver;
-  height: 15vh;}
+.footer-inner {
+  background: silver;
+  height: 15vh;
+  position: relative;
+  top: -10px;
+  left: -10px;
+}
