--- a/styles/style.css
+++ b/styles/style.css
@@ -119,6 +119,16 @@ body {
   text-shadow: 1px 1px 0 #000 -1px -1px 0 #000;
 }
 
+.is-active .menu-button {
+  color: #ff0;
+}
+
+.is-active .menu-button::after {
+  content: "";
+  display: block;
+  border-top: 2px solid #000;
+}
+
 .sub-menu{
   background-color: pink;
   position: absolute;
