--- a/styles/style.css
+++ b/styles/style.css
@@ -216,7 +216,7 @@ body {
   position: relative;
 }
 
-.visual::before, ::after{
+.visual::before, .visual ::after{
   content: "";
   position: absolute;
   width: 100%;
@@ -252,10 +252,11 @@ body {
 
 /* 메인 */
 .main {
-  background: lightgreen;
-  height: 50vh;
+  background: #fff;
+  min-height: 450px;
   display: flow-root;
-  padding: 0 15px;
+  padding: 30px 15px;
+  border-radius: 15px 15px 0 0;
 }
 .group {
   margin: 0 15px;
