--- a/styles/style.css
+++ b/styles/style.css
@@ -252,18 +252,18 @@ body {
 
 /* 메인 */
 .main {
+  display: flow-root;
   background: #fff;
   min-height: 450px;
-  display: flow-root;
   padding: 30px 15px;
   border-radius: 15px 15px 0 0;
 }
+
 .group {
   margin: 0 15px;
   float: left;
 }
 .group1 {
-  background-color: violet;
   width: 250px;
 }
 .group2 {
@@ -274,6 +274,92 @@ body {
   background-color: gold;
   width: 190px;
 }
+
+/* 로그인 */
+.login {
+  box-shadow: 5px 5px 0 0 #ccc;
+  background: orange radial-gradient(circle at right top, orange, orangered);
+  padding: 10px;
+  border-radius: 5px;
+}
+
+.login-title {
+  color: #ff0;
+  font-size: 15px;
+  font-weight: 700;
+  text-indent: 10px;
+}
+
+.login-form {
+  position: relative;
+  background-color: #fff;
+  margin-top: 10px;
+  border-radius: 5px 5px 0 0;
+  padding: 10px 10px 0 10px;
+}
+
+.login-form fieldset {
+  position: relative;
+  border-bottom: 1px solid #aaa;
+  padding-bottom: 5px;
+}
+
+.user-email, .user-pw {
+  margin-bottom: 5px;
+}
+
+
+.login-form label {
+  display: inline-block;
+  width: 4em;
+}
+
+.login-form input {
+  width: 90px;
+  height: 24px;
+  border: 1px solid #aaa;
+  padding: 1px 1px 1px 5px;
+  border-radius: 3px;
+}
+
+.login-button {
+  position: absolute;
+  top: 0;
+  right: 0;
+  height: 53px;
+  background-color: orangered;
+  color: #fff;
+  border: 0;
+  padding: 0 8px;
+  border-radius: 5px;
+  font-size: 13px;
+}
+
+.sign {
+  background-color: #fff;
+  border-radius: 0 0 5px 5px ;
+  padding: 4px 10px 4px 10px;
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: space-between;
+}
+
+.sign li {
+  background-color: pink;
+}
+
+.sign a {
+  display: block;
+  padding: 6px 0;
+}
+
+.sign a::before {
+  content: "\e803";
+  font-family: fontello;
+  margin-right: 8px;
+  color: orangered;
+}
+
 /* 슬로건 */
 .slogan {
   background: skyblue;
