--- a/styles/style.css
+++ b/styles/style.css
@@ -344,7 +344,7 @@ body {
   justify-content: space-between;
 }
 
-.sign li {
+.sign li { display: inline=block;
 }
 
 .sign a {
@@ -358,6 +358,30 @@ body {
   font-family: fontello;
   margin-right: 8px;
   color: orangered;
+}
+
+/* 유효성 검사 배너 */
+.validation-list {
+  background-color: #ff0;
+  margin-top: 25px;
+}
+
+.validation-list li {
+  margin-top: 10px;
+}
+
+.validation-list a {
+  display: block;
+  background: url("./images/validation_icon.png") no-repeat 25px 50%,
+  #ccc linear-gradient(to bottom, #ccc, #eee);
+  padding: 8px 15px 8px 55px;
+  border-radius: 30px;
+  border: 1px solid #aaa;
+}
+
+
+.validation-list a:hover, .validation-list a:focus {
+  color:#f00;
 }
 
 /* 슬로건 */
